[package]
name = "twitchplaylistfixer-rs"
version = "0.1.0"
authors = ["vyneer <41237021+vyneer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3u8-rs = "1.0.6"
error-chain = "0.12.4"
regex = "1"
log = "0.4"
clap = "2.33.3"
env_logger = "0.7.1"
reqwest = { version = "0.10", features = ["blocking"] }
rayon = "1.5"
alphanumeric-sort = "1.4.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'  # Optimize for size.